[package]
name = "artvault"
version = "1.0.0"
description = "ArtVault — Local AI Gallery"
authors = ["You"]
license = "MIT"
repository = ""
default-run = "artvault"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
  "shell-open",
  "dialog-open",
  "fs-read-file",
  "fs-write-file",
  "fs-remove-file",
  "fs-read-dir",
  "fs-create-dir",
  "path-all"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` is run it uses dev mode
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
